<resources>
    <string name="app_name">EasyCalculator</string>
    <string name="titleText">Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_clr">C</string>
    <string name="btn_per">%</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_multi">*</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_div">÷</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_reverse">±</string>
    <string name="btn_zero">0</string>
    <string name="btn_pnt">.</string>
    <string name="btn_equ">=</string>
</resources>
